[project]
name = "jilpa"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "kharish89", email = "k.harish89@gmail.com"},
]
dependencies = [
    "crewai>=0.65.2",
    "python-decouple>=3.8",
    "duckduckgo-search>=6.2.13",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
